<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/titulo_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/texto_titulo_main"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/subtitulo_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/texto_subitulo_main"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/boton_crear_m1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="lanzarCrear"
        android:text="@string/texto_boton_crear_m1" />

    <Button
        android:id="@+id/boton_crear_m2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="lanzarCrear"
        android:text="@string/texto_boton_crear_m2" />

    <Button
        android:id="@+id/boton_sumar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="lanzarOperacion"
        android:text="@string/texto_boton_sumar" />

    <Button
        android:id="@+id/boton_multiplicar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="lanzarOperacion"
        android:text="@string/texto_boton_multiplicar" />

    <Button
        android:id="@+id/boton_volver"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="salir"
        android:text="@string/texto_boton_salir" />

</LinearLayout>
